OSQA-143, fixing text overflow issue under IE8, added max-width to the paragraphs inside question and answer bodies.
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@967 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -764,6 +764,11 @@ ul.errorlist li {
     max-width: 640px;
 }
 
+/* Fixes OSQA-143 IE8 text overflow issue */
+div.question-body p, div.answer-body p {
+    max-width: 700px;
+}
+
 .answered-by-owner {
     background: none repeat scroll 0 0 #E9E9FF;
 }
